--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "hooks": {
         "uDropCabin": {
             "apparmor": "uDropCabin.json",
+			"content-hub": "uDropCabin-content.json",
             "desktop": "uDropCabin.desktop"
         }
     },
