--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.ubuntu.developer.username.udropcabin",
+    "name": "com.ubuntu.developer.bobo1993324.udropcabin",
     "description": "description of uDropCabin",
     "framework": "ubuntu-sdk-14.04-qml-dev1",
     "architecture": "all",
