--- a/uDropCabin.desktop
+++ b/uDropCabin.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=uDropCabin
-Exec=/usr/bin/qmlscene $@ /usr/share/uDropCabin/uDropCabin.qml
+Exec=/usr/bin/qmlscene $@ ./uDropCabin.qml
 Icon=qmlscene
 Terminal=false
 Type=Application
