--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "com.ubuntu.developer.bobo1993324.udropcabin",
     "description": "UDropCabin is an unOfficial Dropbox app. It can access Dropbox files and transfer them to other apps",
-    "framework": "ubuntu-sdk-14.10-qml-dev3",
+    "framework": "ubuntu-sdk-15.04-qml",
     "architecture": "armhf",
     "title": "uDropCabin",
     "hooks": {
